# Learning

CmakeProject/: CMakeLists.txt  Readme.md  main.cpp
CmakeProject/include/: ClassExample.h
CmakeProject/src/: ClassExample.cpp
GameStateManagerDLL/: GameStateManagerDLL.sln  Readme.md
GameStateManagerDLL/GameStateDllUTests/: GameStateDllUTests.vcxproj  ut_IState.cpp  ut_StateManager.cpp
GameStateManagerDLL/GameStateManagerDLL/: GameStateManagerDLL.vcxproj  GameStateManagerDLL.vcxproj.filters
GameStateManagerDLL/GameStateManagerExample/: GameStateManagerExample.cpp  GameStateManagerExample.vcxproj  GameStateManagerExample.vcxproj.filters
LoggerDll/: LoggerDll.sln  Readme.md
LoggerDll/LoggerDll/: Logger.cpp  Logger.h  LoggerDll.vcxproj  LoggerDll.vcxproj.filters  export.h
LoggerDll/LoggerExample/: LoggerExample.vcxproj  main.cpp
SFML_UI/: SFML_UI.sln
SFML_UI/SFML_UI/: BoundingBox.h  Buttom.cpp  Buttom.h  Callable.cpp  Callable.h  Gui.cpp  Gui.h  Label.cpp  Label.h  Layout_Base.cpp  Layout_Base.h  SFML_UI.vcxproj  SFML_UI.vcxproj.filters  Settings.cpp  Settings.h  SimpleLayout.cpp  SimpleLayout.h  UiElement.cpp  UiElement.h  UiElementHolder.cpp  UiElementHolder.h  export.h
SFML_UI/SFML_UI_example/: SFML_UI_example.vcxproj  main.cpp
TCPClientServer/: TCPClientServer.sln
TCPClientServer/Shared/: Message.cpp  Message.h
TCPClientServer/TCPClient/: CL_main.cpp  Client.cpp  Client.h  TCPClient.vcxproj  TCPClient.vcxproj.filters  TcpClient.cpp  TcpClient.h  client_main.cpp  main.cpp
TCPClientServer/TcpServer/: Server.h  (+14 more)
multihread/: multithreading.sln
(+15 files in other folders)
